<resources>
    <string name="app_name" translatable="false">Quizzon</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="login">Login</string>
    <string name="if_you_don_t_have_account_register_here">If you don\'t have account, Register Here</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="add_question">Add Question</string>
    <string name="enter_quiz_tile">Enter Quiz Tile</string>
    <string name="write_question">Write Question</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="option_label">Option %d %s</string>
    <string name="answer_label">Answer %s</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="save">Save</string>
    <string name="choose_category">Choose Category</string>
    <string name="correct_option">Correct Option</string>

    <style name="all_quizzes">All Quiz</style>

    <string name="about_app">Quizzon is app where you can create your own quizzes and share with your contact and also can play many quiz free.</string>
    <string name="about_developer">Rohit Jakhar created this project during Harperdb hackathon with MIT open source Licence</string>
    <string name="about_harper">Harper db is new technology for handing data in cloud data base</string>

    <string name="developer">About Developer</string>
    <string name="harperdb">About HarperDB</string>
    <string name="github">Github Link</string>
    <string name="linkedIn">LinkedIn Link</string>
    <string name="twitter">Twitter</string>
    <string name="logout">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_email">Send Email</string>
    <string name="forget_password">Forget Password</string>
    <string name="quizzon_tag_line">Create and Play Unlimited Quizzes</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="join_quiz">Join Quiz</string>
    <string name="check_answer">Check Answer</string>
    <string name="answer">Answer</string>
    <string name="all_quiz">All Quiz</string>
    <string name="login_line">Already have an account? Login</string>
    <string name="questions">Questions:</string>
    <string name="login_success">Login Success</string>
    <string name="uploaded">Uploaded</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="result">Result</string>
    <string name="start">Start</string>
    <string name="back">back</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="hi">Hi!</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="join_a_quiz">Join a Quiz</string>
    <string name="enter_quiz_id">Enter Quiz Id</string>
    <string name="quiz_list">Quiz List</string>
    <string name="no_quiz_created">No Quiz Created</string>
    <string name="retry">Retry</string>
    <string name="delete">delete</string>
    <string name="back_home">Back Home</string>
    <string name="wrong">Wrong</string>
    <string name="don_t_worry_we_will_help_you">Don\'t worry we will help you!</string>
    <string name="quiz_created">Quiz Created:-</string>
    <string name="english">English</string>
    <string name="sanskrit">Sanskrit</string>
    <string name="choose_language">Choose Language</string>
    <string name="total_question">Total Question: %s</string>
    <string name="category_name">Category: %s</string>
    <string name="created_by">Created by: %s</string>
    <string name="continue_with_english">Continue with English</string>
    <string name="continue_with_sanskrit">Continue with Sanskrit</string>
    <string name="select_language">Select Language</string>
    <string name="error_cant_load">Can\'t Load Please Refresh</string>
    <string name="error_enter_question_statement">Enter Question Statement</string>
    <string name="error_option">Enter Option: %d</string>
    <string name="error_write_answer">Write Answer</string>
    <string name="error_answer_not_match">Answer Not Match with options</string>
    <string name="error_enter_quiz_title">Enter Quiz Title</string>
    <string name="error_select_category">Select A Category First</string>
    <string name="error_add_min_question">Please Add 5 Question at least</string>
    <string name="message_quiz_created">Quiz Created! Copy quiz id"</string>
    <string name="copy">Copy</string>
    <string name="error_incorrect_quiz_id">Enter Correct Quiz Id</string>
    <string name="error_no_data_found">Not Found Data</string>
    <string name="message_success">Login Success</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="right">Right</string>
    <string name="error_choose_answer">PLease Chose a Option</string>
    <string name="message_right_answer">Right Answer: %s</string>
    <string name="total_quiz">Total quizzes: %d</string>
    <string name="password_not_match">Password Not Match</string>
    <string name="result_status">%d right out of %d</string>
    <string name="delete_quiz">Delete Quiz ?</string>
    <string name="copied_link">Link Copy!</string>
    <string name="upload_quiz">Upload Quiz</string>

</resources>