<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/nav_all_quiz"
        android:title="@string/search"
        android:icon="@drawable/ic_list"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/nav_create_quiz"
        android:title="@string/add"
        android:icon="@drawable/ic_plus"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_user"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/nav_about"
        android:title="@string/about"
        android:icon="@drawable/ic_award"
        app:showAsAction="ifRoom"
        />
</menu>