<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rohit.quizzon.ui.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_quizListFragment"
            app:destination="@id/quizListFragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_create_quiz"
            app:destination="@id/nav_create_quiz"
            app:enterAnim="@anim/fade_in"
            app:popEnterAnim="@anim/scale_down" />
        <action
            android:id="@+id/action_nav_home_to_quizFragment"
            app:destination="@id/quizFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.rohit.quizzon.ui.fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.rohit.quizzon.ui.fragment.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_all_quiz"
        android:name="com.rohit.quizzon.ui.fragment.SearchFragment"
        android:label="@string/all_quiz"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_nav_search_to_quizFragment"
            app:destination="@id/quizFragment" />
    </fragment>
    <fragment
        android:id="@+id/quizListFragment"
        android:name="com.rohit.quizzon.ui.fragment.QuizAllFragment"
        android:label="@string/quiz_list"
        tools:layout="@layout/fragment_quiz_all">
        <argument
            android:name="category_id"
            app:argType="string" />
        <action
            android:id="@+id/action_quizListFragment_to_quizFragment"
            app:destination="@id/quizFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_create_quiz"
        android:name="com.rohit.quizzon.ui.fragment.CreateQuizFragment"
        android:label="@string/create_quiz"
        tools:layout="@layout/fragment_create_quiz">
        <action
            android:id="@+id/action_createQuizFragment_to_home_nav"
            app:popUpTo="@id/home_nav" />
    </fragment>
    <fragment
        android:id="@+id/quizFragment"
        android:name="com.rohit.quizzon.ui.fragment.PlayQuizFragment"
        android:label="@string/play_quiz"
        tools:layout="@layout/fragment_play_quiz">
        <argument
            android:name="quizData"
            app:argType="com.rohit.quizzon.data.model.response.QuizResponse" />
        <action
            android:id="@+id/action_quizFragment_to_resultFragment"
            app:destination="@id/resultFragment"
            app:popUpTo="@id/home_nav"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.rohit.quizzon.ui.fragment.ResultFragment"
        android:label="@string/result"
        tools:layout="@layout/fragment_result">
        <argument
            android:name="quizResult"
            app:argType="com.rohit.quizzon.data.model.QuizResult" />
    </fragment>
</navigation>