<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.PlayQuizFragment">

    <TextView
        android:id="@+id/textQuestionStatement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/optionChipGroup"
        style="@style/OptionChip"
        app:selectionRequired="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline4"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOption1"
            style="@style/OptionChip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/option1" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOption2"
            style="@style/OptionChip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/option2" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOption3"
            style="@style/OptionChip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/option3" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOption4"
            style="@style/OptionChip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/option4" />
    </com.google.android.material.chip.ChipGroup>

    <Button
        style="@style/CustomButton"
        android:id="@+id/btnCheckAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/check_answer"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionChipGroup" />

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>